# dbg-tools

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  debug.h  debug.hpp  tmp  tmp.cpp
.github/workflows/: ci.yml
examples/: CMakeLists.txt  demo.cpp
examples/dbg/: CMakeLists.txt  demo.cpp
examples/gdb/: CMakeLists.txt  demo.cpp
include/: dbg.h  gdb.h
tests/: demo  demo.cpp  test  test.cpp  test_catch2.cpp  unit_test.cpp
utils/: gdb_backtrace.py  gen_flatten.py  gen_macro.py  generate.py  generate_runtime.py
